@@ -98,9 +98,8 @@
             <plugin>
                 <!-- for unit test -->
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>2.22.0</version>
                 <configuration>
-                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest</exclude>
                     </excludes>
